<resources>
    <string name="app_name">ATS</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="text_login">Login</string>
    <string name="error_msg_login">Username or Password can\'t be blank</string>
    <string name="user_login">Account Login</string>
    <string name="accounts">Accounts</string>
    <string name="settings">Settings</string>
    <string name="feedback">Feedback</string>
    <string name="setting_notification">Enable Notifications</string>
    <string name="setting_data_saver">Turn on Data Saver</string>
    <string name="show_balance">Balance : %s</string>
    <string name="remaining_balance">Remaining Balance : %s</string>
    <string name="enter_subject">Enter Subject</string>
    <string name="enter_message">Describe your feedback in brief...</string>
    <string name="text_submit">Submit Feedback</string>
    <string name="err_subject">Subject cannot be blank</string>
    <string name="err_message">Feedback cannot be blank</string>
    <string name="successful_submitted">Feedback Submitted Successfully</string>
</resources>