<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/accountsFragment"
        android:enabled="true"
        android:icon="@drawable/ic_account_circle"
        android:title="@string/accounts"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/feedbackFragment"
        android:enabled="true"
        android:icon="@drawable/ic_insert_comment"
        android:title="@string/feedback"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/settingFragment"
        android:enabled="true"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings"
        app:showAsAction="ifRoom" />
</menu>