<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <androidx.cardview.widget.CardView
        android:layout_margin="@dimen/_12sdp"
        app:cardCornerRadius="@dimen/_4sdp"
        app:cardElevation="@dimen/_4sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_margin="@dimen/_16sdp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_subject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_et_login"
                android:hint="@string/enter_subject"
                android:inputType="text"
                android:minHeight="48dp" />


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_message"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_et_login"
                android:hint="@string/enter_message"
                android:inputType="text"
                android:gravity="start"
                android:minHeight="@dimen/_120sdp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bt_feedback_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:text="@string/text_submit"
                android:textAllCaps="false"
                android:textColor="@color/light_black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:backgroundTint="@color/white"
                app:cornerRadius="@dimen/_4sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/cardView"
                app:layout_constraintStart_toStartOf="@+id/cardView"
                app:strokeColor="@color/grey"
                app:strokeWidth="1dp" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>


</layout>
