<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.login.LoginActivity">


        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/user_login"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/cardView"
            app:layout_constraintEnd_toEndOf="@+id/cardView"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardCornerRadius="4dp"
            app:cardElevation="4dp"
            app:layout_constraintBottom_toTopOf="@+id/bt_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_login_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:layout_marginLeft="@dimen/_12sdp"
                    android:layout_marginRight="@dimen/_12sdp"
                    android:background="@drawable/bg_et_login"
                    android:hint="@string/enter_username"
                    android:inputType="text"
                    android:minHeight="48dp" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_12sdp"
                    android:layout_marginRight="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:background="@drawable/bg_et_login"
                    android:hint="@string/enter_password"
                    android:inputType="textPassword"
                    android:minHeight="48dp" />



                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:indeterminate="true"
                    android:layout_marginTop="@dimen/_18sdp"
                    android:minHeight="@dimen/_8sdp"
                    android:visibility="invisible"
                    app:layout_constraintEnd_toEndOf="@+id/cardView"
                    app:layout_constraintStart_toStartOf="@+id/cardView"
                    app:layout_constraintTop_toBottomOf="@+id/cardView" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:padding="@dimen/_8sdp"
            android:text="@string/text_login"
            android:textAllCaps="false"
            android:textColor="@color/light_black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:backgroundTint="@color/white"
            app:cornerRadius="@dimen/_4sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/cardView"
            app:layout_constraintStart_toStartOf="@+id/cardView"
            app:strokeColor="@color/grey"
            app:strokeWidth="1dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>